[package]
name = "bootstrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true 
panic = "abort"
codegen-units = 1 
strip = true

[dependencies]
widestring = { default-features = false, version = "1.0.2" }
netcorehost = { version = "0.15.1", features = ["latest", "nethost-download"], default-features = false }
brotli-decompressor = "2.3.4"
ntapi = "0.4.1"